# cmg-bioloop

./: Dockerfile.mongo_to_postgres  admins.json  docker-compose.yml  operators.json  users.json
api/config/: default.json  production.json
api/prisma/: schema.prisma  seed.js
api/prisma/migrations/20250521092222_track_cmg_dataset_ids_in_bioloop/: migration.sql
api/prisma/migrations/20250617134031_cmg_id_optional/: migration.sql
api/prisma/migrations/20250617154748_cmg_to_bioloop/: migration.sql
db_conversion/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt
db_conversion/cmg_models/: clean.js  content.js  conversion.js  dataproduct.js  dataset.js  download.js  event.js  group.js  inspection.js  project.js  session.js  upload.js  uploadType.js  user.js  worker.js
db_conversion/mongo-queries/: queries.js
db_conversion/src/convert/: common.py  utils.py
db_conversion/src/convert/constants/: __init__.py  bioloop.py  cmg.py  common.py
db_conversion/src/convert/entity/: __init__.py  about.py  audit_log.py  dataset.py  dataset_file.py  dataset_hierarchy.py  file.py  project.py  user.py  workflow.py
db_conversion/src/convert/operations/: __init__.py  ddl.py  dml.py
db_conversion/src/convert/pg_queries/: __init__.py  queries.py
db_conversion/src/convert/scripts/: convert.py  (+1 more)
mongo_to_postgres/scripts/: rebuild_and_run.sh  run.sh
workers/: .gitignore  pyproject.toml
workers/tests/: test.py
workers/workers/: utils.py
workers/workers/config/: common.py
workers/workers/scripts/: .env.example  mongo_to_postgres.py
